@@ -1,0 +1,1 @@
+$("#patients").html("<%= escape_javascript(render("patients")) %>");
