@@ -1,0 +1,1 @@
+$("#prescreens").html("<%= escape_javascript(render("prescreens")) %>");
